tests/NormalTests/paczka1/fuzzy1/25424728.err
Error in line 1: iG9 A138 42,7
Error in line 2: iG9 A688 0,3
Error in line 4: iG9 A138 20,0
Error in line 8: sJRX S344 23,17
Error in line 5: sJRX S344 66,5
Error in line 18: XQN80Bwyyyv A688 18,
Error in line 17: sJRX A138 94,3
Error in line 27: A688 S344 64,1
Error in line 15: XQN80Bwyyyv A688 28,8
Error in line 22: arE A138 1,4
